# cmake_tutorial

./: README.md
cmake_2/: CMakeLists.txt
cmake_3/: CMakeLists.txt
cmake_4/: CMakeLists.txt  build.sh  main.cpp
cmake_5/: CMakeLists.txt
cmake_5/lib/: CMakeLists.txt  hello.c
cmake_6/: CMakeLists.txt  build.sh  main.cpp
cmake_6/inc/: Test1.h
cmake_6/src/: Test1.cpp
cmake_7/: CMakeLists.txt  do.sh
cmake_7/src/module2/: Test1.h
cmake_8/: CMakeLists.txt  do.sh  linker.ld
cmake_8/src/module1/: Test1.cpp  Test2.h
cmake_8/src/module2/: Test2.cpp
